tests/ast_interpreter/err_string_plus_number.expected
<string>:2:21: error: operator + cannot be applied to String and Int
    print("count: " + 42);
                    ^
