tests/ast_interpreter/err_string_plus_number.nx
fun main() {
    print("count: " + 42);
    return 0;
}